--- a/my_template_project/base/templates/base/pagesBase.html
+++ b/my_template_project/base/templates/base/pagesBase.html
@@ -8,6 +8,11 @@
     <meta charset="UTF-8">
     {% bootstrap_css %}
     <link rel="stylesheet" href="{% static 'css/stylePages.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -16,9 +21,38 @@
 
 <body>
     {% include 'base/navPages.html' %}
-    {% block content %}
-    {% endblock %}
+    <div class="messages"></div>
+
+{% block content %}
+{% endblock %}
     <!-- Bootstrap JS and dependencies -->
     {% bootstrap_javascript jquery='full' %}
 </body>
+<script>
+function Message(message, alert) {
+    var messageElement = $('<div>').addClass('message-box ' + alert).text(message);
+    $('.messages').append(messageElement);
+    setTimeout(function() {
+        messageElement.remove();
+    }, 3000);
+}
+    
+    function getCookie(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+    
+</script>
+{% block custom_script %}
+    {% endblock %}
 </html>
