--- a/my_template_project/static/css/styleDashboard.css
+++ b/my_template_project/static/css/styleDashboard.css
@@ -192,6 +192,35 @@ a:hover {
     color: #e5e5e5;
     margin-top: 0;
 }
+.message-box {
+    padding: 15px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 16px;
+    width: 300px; /* Adjust width as needed */
+}
+.messages {
+    position: fixed; /* Position fixed so it stays in place */
+    top: 10px;
+    right: 10px;
+    width: auto; /* Adjust width as needed */
+    z-index: 1000; /* Ensure it is on top of other content */
+}
+.messages .alert {
+    padding: 10px;
+    border-radius: 5px;
+    color: #2a2a2a;
+}
+
+.messages .alert.success {
+    background-color: #28a745;
+}
+
+.messages .alert.error {
+    background-color: #dc3545;
+}
+
 /* Responsive styles */
 @media (max-width: 992px) {
     .sidebar {
