--- a/my_template_project/static/css/styleDashboard.css
+++ b/my_template_project/static/css/styleDashboard.css
@@ -220,7 +220,13 @@ a:hover {
 .messages .alert.error {
     background-color: #dc3545;
 }
+.messages .alert.alert-success {
+    background-color: #28a745;
+}
 
+.messages .alert.alert-error {
+    background-color: #dc3545;
+}
 /* Responsive styles */
 @media (max-width: 992px) {
     .sidebar {
