--- a/my_template_project/dashboard/templates/dashboard/home.html
+++ b/my_template_project/dashboard/templates/dashboard/home.html
@@ -1,4 +1,64 @@
-{% extends base_template %}
+{% extends 'base/baseDashboard.html' %}
+
 
 {% block content %}
+    {% if is_super %}
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-2 sidebar">
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link active" id="video-tab" data-bs-toggle="tab" href="#video-content">Video</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" id="settings-tab" data-bs-toggle="tab" href="#settings-content">Settings</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-10 content tab-content">
+                    <div class="container-fluid">
+                        <div class="messages"></div>
+                    </div>
+                    <div class="tab-pane fade show active" id="video-content">
+                        dashbaord
+                    </div>
+
+                    <div class="tab-pane fade" id="settings-content">
+                        {% include 'dashboard/superSettings_tabs.html' %}
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+    {% else %}
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-2 sidebar">
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link active" id="video-tab" data-bs-toggle="tab" href="#video-content">Video</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" id="settings-tab" data-bs-toggle="tab" href="#settings-content">Settings</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-10 content tab-content">
+                    <div class="container-fluid">
+                        <div class="messages"></div>
+                    </div>
+                    <div class="tab-pane fade show active" id="video-content">
+                        dashbaord
+                    </div>
+
+                    <div class="tab-pane fade" id="settings-content">
+                        settings
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endif %}
 {% endblock %}
