--- a/my_template_project/base/templates/base/baseDashboard.html
+++ b/my_template_project/base/templates/base/baseDashboard.html
@@ -6,6 +6,7 @@
 
 <head>
     <meta charset="UTF-8">
+    
     {% bootstrap_css %}
     <link rel="stylesheet" href="{% static 'css/styleDashboard.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -21,7 +22,12 @@
 
 <body>
     {% include 'base/navDashbaord.html' %}
-    <div class="messages"></div>
+
+
+    <div class="container-fluid">
+        <div class="messages"></div>
+    </div>
+
 
 {% block content %}
 {% endblock %}
@@ -29,7 +35,7 @@
     {% bootstrap_javascript jquery='full' %}
 </body>
 <script>
-function Message(message, alert) {
+function alertMessage(message, alert) {
     var messageElement = $('<div>').addClass('message-box ' + alert).text(message);
     $('.messages').append(messageElement);
     setTimeout(function() {
@@ -51,7 +57,17 @@ function Message(message, alert) {
         }
         return cookieValue;
     }
-    
+    // Function to get the CSRF token from the cookie
+    function getCSRFToken() {
+        let token = null;
+        document.cookie.split(';').forEach(function(cookie) {
+            let [name, value] = cookie.split('=');
+            if (name.trim() === 'csrftoken') {
+                token = value;
+            }
+        });
+        return token;
+    }
 </script>
 {% block custom_script %}
     {% endblock %}
