--- a/my_template_project/pages/templates/templates/Pages.html
+++ b/my_template_project/pages/templates/templates/Pages.html
@@ -1,3 +1,5 @@
+{% extends 'base/basePages.html' %}
+{% block content %}
 
     <header>
         <h1>{{ header_text }}</h1>
@@ -25,3 +27,5 @@
     </section>
 
 
+
+{% endblock %}
