--- a/my_template_project/base/templates/base/navPages.html
+++ b/my_template_project/base/templates/base/navPages.html
@@ -12,12 +12,11 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
         </li>
+        {% for page in navbar_pages %}
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="{% url 'dynamic_page' page.slug %}">{{ page.title }}</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
+        {% endfor %}
       </ul>
       <!-- Buttons -->
       <div class="d-flex ms-auto">
