--- a/my_template_project/base/templates/base/basePages.html
+++ b/my_template_project/base/templates/base/basePages.html
@@ -8,6 +8,8 @@
     <meta charset="UTF-8">
     {% bootstrap_css %}
     <link rel="stylesheet" href="{% static 'css/stylePages.css' %}">
+    <link rel="stylesheet" href="{% static 'css/message.css' %}">
+    <link rel="stylesheet" href="{% static 'css/nav.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
